Alignment issues

--- a/components/Me/Me.module.scss
+++ b/components/Me/Me.module.scss
@@ -65,7 +65,7 @@
         height: 20vw;
         width: 17vw;
         margin-left: 34vw;
-        margin-top: 7vw;
+        margin-top: 5.2vw;
        
 
     }
